deployment/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-api
  namespace: demo-cni-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask-api
  template:
    metadata:
      labels:
        app: flask-api
    spec:
      containers:
      - name: flask-api
        image: ghcr.io/tom9eiger/backend-demo:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
