deployment/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-api
  template:
    metadata:
      labels:
        app: flask-api
    spec:
      containers:
      - name: flask-api
        image: ghcr.io/tom9eiger/backend-demo:latest
        ports:
        - containerPort: 80
