deployment/demo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-pod
  namespace: demo-namespace
spec:
  containers:
  - name: demo-container
    image: busybox
    command: ["sh", "-c", "sleep 3600"]
