deployment/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
  namespace: demo-cni-app
spec:
  podSelector:
    matchLabels:
      app: flask-api
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - protocol: TCP
      port: 80
# ---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: deny-all-other-traffic
# spec:
#   podSelector:
#     matchLabels:
#       app: flask-api
#   policyTypes:
#   - Ingress
